# c-FuSa

./: .cfusa-dispositions.json  .cfusa-hara.json  .cfusa-reqs.json.template  .cfusa.json  .cfusa.json.template  .cfusa_qualification.json  .dockerignore  .fusa-reqs.json  .fusa.json  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  cfusa-reqs.json  docker-compose.yml  fmea.csv  fmea.json  safety-case.md  tara.json  tara.md
.cfusa_release/: my-project-0.1.0.spdx.json  provenance.json
.github/workflows/: ci.yml  codeql.yml  release.yml
cmd/cfusa/: cmd_analyze.c  cmd_audit_pack.c  cmd_badge.c  cmd_boundary.c  cmd_capabilities.c  cmd_check.c  cmd_comp.c  cmd_coupling.c  cmd_coverage.c  cmd_cyber.c  cmd_diff.c  cmd_disposition.c  cmd_do178.c  cmd_fix.c  cmd_fmea.c  cmd_hara.c  cmd_hooks.c  cmd_iec61508.c  cmd_iec62443.c  cmd_impact.c  cmd_init.c  cmd_iso21434.c  cmd_iso26262.c  cmd_lint.c  cmd_metrics.c  cmd_misra.c  cmd_pr.c  cmd_qualify.c  cmd_release.c  cmd_report.c  cmd_req.c  cmd_safety_case.c  cmd_safety_rules.c  cmd_sas.c  cmd_sci.c  cmd_sign.c  cmd_slsa.c  cmd_tara.c  cmd_template.c  cmd_trace.c  (+5 more)
docs/commands/: check.md  lint.md
docs/standards/: do178c.md  misra-c.md
include/cfusa/: commands.h  config.h  engine.h  report.h  runtime.h  utils.h  version.h
src/: cfusa_runtime.c  config.c  engine.c  report.c  utils.c
tests/: test_analyze_rules.c  test_analyze_rules2.c  test_asil_table.c  test_cli_commands.c  test_commands2.c  test_comp.c  test_config.c  test_config_advanced.c  test_cyber_cy011_020.c  test_cyber_extended.c  test_cyber_rules.c  test_cyber_rules2.c  test_engine.c  test_engine_advanced.c  test_fusa_rules.c  test_hara.c  test_hara_advanced.c  test_impact.c  test_lint_extended.c  test_lint_rules.c  test_lint_rules2.c  test_match_outside_string.c  test_new_commands.c  test_qualify.c  test_report.c  test_report_advanced.c  test_report_formats.c  test_req_trace_cov.c  test_runtime.c  test_safety_commands.c  test_safety_rules.c  test_trace_req.c  test_utils.c  test_utils_advanced.c
